--- a/include/0.tex
+++ b/include/0.tex
@@ -38,7 +38,7 @@ where \(F : \wp U \times \wp U \to \wp U\) for some universe \(U\), are useful s
 respectively.
 
 We have the {\em product} of sets of a family too: given a family \(\set{X_i}_{i \in I}\)
-\[\prod_{i \in I} X_i \coloneq \set{f : I \to \bigcup_{i \in I} X_i \mid f(i) \in X_i}.\]
+\[\prod_{i \in I} X_i \coloneq \set{f : I \to \bigcup_{i \in I} X_i \mid f(i) \in X_i \text{ for every } i \in I}.\]
 When \(\set{X_i}_{i \in I}\) is finite and \(I = \set{1, \dots{}, n}\), the definition is quite simplified
 \[\prod_{i \in I} X_i \coloneq \set{(x_1, \dots{}, x_n) \mid x_i \in X_i \text{ for every } i \in I}.\]
 
